--- a/Front/src/compenents/Chat/ConversationContainer/ConversationContainer.css
+++ b/Front/src/compenents/Chat/ConversationContainer/ConversationContainer.css
@@ -50,11 +50,12 @@
     border: 1px solid black;
     margin-top: 20px;
     display:flex;
+    object-fit: cover;
 }
 
 .profile-pic-receiver img {
-    height: 100%;
-    width: 100%;
+    height: 100px;
+    width: 100px;
 
     object-fit: cover;
 }
